fixed overflow on x axis

--- a/client/resources/styles/index.css
+++ b/client/resources/styles/index.css
@@ -2,6 +2,9 @@
 body{
     font-family: 'Lato', serif;
     background-color: #FEFFFF;
+    overflow-x: hidden;
+    align-items: center;
+    
 }
 
 .footer-top{
@@ -154,6 +157,8 @@ body{
     padding-bottom: 5px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     background-color: white;
+    width: 100%;
+    max-width: 100%;
     
 }
 /* bold name */
